Add swagger for UpdateTask and DeleteTask
